--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -58,7 +58,8 @@ main .left {
   width: 100%;
   min-height: 100%;
   font-size: 15px;
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, 'Roboto Mono', monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono",
+    monospace;
   background: transparent;
   color: #fff;
   line-height: 1.5;
@@ -160,35 +161,39 @@ main .left .review {
   border-radius: 8px;
   z-index: 30;
   box-shadow: 0 0 8px rgba(127, 255, 212, 0.25),
-              0 0 14px rgba(127, 255, 212, 0.12);
+    0 0 14px rgba(127, 255, 212, 0.12);
   transition: transform 0.22s ease, box-shadow 0.22s ease;
 }
 
 main .left .review:hover {
   transform: translateY(-2px) scale(1.03);
   box-shadow: 0 0 12px rgba(127, 255, 212, 0.35),
-              0 0 22px rgba(127, 255, 212, 0.16);
+    0 0 22px rgba(127, 255, 212, 0.16);
   animation: buttonPulse 2s infinite ease-in-out;
 }
 
 @keyframes buttonPulse {
   0% {
     box-shadow: 0 0 8px rgba(127, 255, 212, 0.22),
-                0 0 14px rgba(127, 255, 212, 0.10);
+      0 0 14px rgba(127, 255, 212, 0.1);
   }
   50% {
     box-shadow: 0 0 12px rgba(127, 255, 212, 0.32),
-                0 0 22px rgba(127, 255, 212, 0.14);
+      0 0 22px rgba(127, 255, 212, 0.14);
   }
   100% {
     box-shadow: 0 0 8px rgba(127, 255, 212, 0.22),
-                0 0 14px rgba(127, 255, 212, 0.10);
+      0 0 14px rgba(127, 255, 212, 0.1);
   }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .editor-bg-robot {
@@ -202,3 +207,29 @@ main .left .review:hover {
   pointer-events: none;
   z-index: 0;
 }
+
+.placeholder-text {
+  color: rgba(255, 255, 255, 0.5);
+  font-style: normal;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+  color: "#fff";
+  font-size: 15;
+}
+
+.editor-placeholder {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgba(255, 255, 255, 0.5);
+  font-style: normal;
+  pointer-events: none; /* text ke upar click na ho */
+  font-size: 1rem;
+  text-align: center;
+}
+
